# OVSJG-SUSO-public

./: .env.sample  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  config.template.yml  pyproject.toml  required_data.txt  requirements.txt  setup.py
output/100_pull_and_clean_data/: 015_convert_to_parquet.ipynb  020_createlookuptable_suso_osse.ipynb  030_attendance_cleaning.ipynb  040_descriptives_previoussy_forPAP.ipynb  050_cleanstudents_whoswitchsystems.ipynb
output/200_descriptives/: 060_sample_descriptives.ipynb  070_attendance_descriptives.ipynb
output/300_analysis/: 080_attendance_ABtests.ipynb  090_analyze_engagement.ipynb
output/tables/: chronicabs_logit.tex  total_median_linear.tex  total_median_negbin.tex  total_obs_linear.tex  total_obs_negbin.tex  truancy_logit.tex  unex_median_linear.tex  unex_median_negbin.tex  unex_obs_linear.tex  unex_obs_negbin.tex
probabilities/: Power.ipynb  readme.md  suso_certainty_calculations_papv1.ipynb  suso_certainty_calculations_papv2.ipynb
src/R/400_additional_plots/: 000_rmd_setup.R  100_attendance_ABtests_additionalplots.Rmd  110_attendance_regressionrobustness.Rmd  120_Rplotting.Rmd
src/notebooks/100_pull_and_clean_data/: 000_refresh_mailings_database.ipynb  001_extract_data_from_sources_suso.ipynb  010_merge_and_wrangle_suso.ipynb  015_convert_to_parquet.ipynb  020_createlookuptable_suso_osse.ipynb  (+3 more)
src/suso/: ab_test.py  abtesting.py  cli.py  click2mail.py  constants.py  database.py  email.py  eto.py  mailchimp.py  plotting_themes.py  render.py  utils.py
suso/: cli.py  click2mail.py  constants.py  database.py  email.py  eto.py  mailchimp.py  render.py
suso/templates/: template.tex.j2
tests/: test_click2mail.py  test_render.py
(+6 files in other folders)
