[tool.poetry]
name = "ovsjg-suso"
version = "0.1.0"
description = "Code associated with The Lab @ DC's Show Up, Stand Out project"
authors = [
    "Kevin H. Wilson <kevin.wilson@dc.gov>",
    "Rebecca A. Johnson <rebecca.johnson@dc.gov>"
]
packages = [
    { include = "suso", from = "src" }
]
license = "CC-0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
mailchimp3 = "^3.0.15"
requests = "^2.26.0"
psycopg2-binary = "^2.9.1"
Jinja2 = "^3.0.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
click = "^8.0.1"
pandas = "^1.3.3"
PyYAML = "^5.4.1"
pyodbc = "^4.0.32"
jupyter = "^1.0.0"
scipy = "^1.7.1"
plotnine = "^0.8.0"
recordlinkage = "^0.14"
SQLAlchemy = {version = ">=1.4,<1.4.23", extras = ["mypy"]}
sshtunnel = "^0.4.0"
geopandas = "^0.9.0"
Rtree = "^0.9.7"
seaborn = "^0.11.2"
pyarrow = "^5.0.0"
bokeh = "^2.4.0"
us = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.2.1"
isort = "^5.7.0"
ipdb = "^0.13.4"
mypy = "^0.910"
pandas = "^1.3.2"
types-requests = "^2.25.6"
pytest-postgresql = "^3.1.1"
nbqa = "^1.1.1"
papermill = "^2.3.3"
nbstripout = "^0.5.0"

[tool.poetry.scripts]
susocli = "suso.cli:cli"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df,pc"

[tool.pylint.messages_control]
disable = "C0330, C0326, R0912, R0913, R0914, R0915"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
